4 files modified, 2 added

--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,18 @@ p {
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+body {
+  margin: 0px !important;
+}
+
+a {
+  text-decoration: none;
+}
+
 .flex {
   display: flex;
 }
 
+.cursor-pointer {
+  cursor: pointer;
+}
