--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,12 @@ body {
   margin: 0px !important;
 }
 
+main {
+  padding: 3rem;
+  margin: 0 auto;
+  min-height: 100vh;
+}
+
 a {
   text-decoration: none;
 }
