--- a/src/components/Table/style.css
+++ b/src/components/Table/style.css
@@ -20,3 +20,21 @@
   width: 20%;
   justify-content: space-between;
 }
+
+.btn {
+  background-color: var(--blue);
+  border: none;
+  color: white;
+  padding: 12px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.search-box {
+  padding: 6px;
+  font-size: 17px;
+}
