--- a/src/components/Auth/Login.css
+++ b/src/components/Auth/Login.css
@@ -12,10 +12,15 @@ form {
 .form {
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   padding: 20px;
+  min-width: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .form-title {
   text-align: center;
+  margin: 0;
 }
 
 .form-label {
